@@ -32,3 +32,5 @@ insert into usrgrp (usrgrpid, name) values (NULL, 'Zabbix administrators');
 
 alter table items add delta int1  DEFAULT '0' NOT NULL;
 alter table items add prevorgvalue float8  DEFAULT NULL;
+
+alter table actions add recipient int1  DEFAULT '0' NOT NULL;
