@@ -1,5 +1,6 @@
 Changes for 1.0beta11:
 
+ - added column actions.recipient (Alexei)
  - added support of system[proccount] under Solaris (Alexei) 
  - support for swap sizes >2Gb under Solaris. Thanks to Franky
  Van Liedekerke. (Alexei)
